# csrd-compliance-mcp

./: .gitignore  .mcp.json  README.md  acp.json  actor.json  apify-actor.json  llms.txt  pyproject.toml  server.json  server.py  smithery.yaml  test_server.py
.well-known/: agent-card.json  agent.json  mcp-server  mcp-server-card.json
tests/: test_fuzz.py
