[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "csrd-compliance-mcp"
version = "1.2.3"
description = "EU Corporate Sustainability Reporting Directive (CSRD) compliance MCP — 12 ESRS standards audit, double materiality assessment, Scope 1/2/3 GHG readiness, iXBRL taxonomy check. Directive (EU) 2022/2464. By MEOK AI Labs."
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "MEOK AI Labs", email = "nicholas@meok.ai"}]
keywords = ["mcp", "csrd", "esrs", "sustainability-reporting", "double-materiality", "ghg-protocol", "scope-3", "ixbrl", "eu-taxonomy", "climate", "meok-ai-labs", "esg-reporting", "eu-regulation"]
classifiers = ["Programming Language :: Python :: 3", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent"]
dependencies = ["mcp>=1.0.0"]

[project.urls]
Homepage = "https://meok.ai/csrd-compliance-mcp"
Repository = "https://github.com/CSOAI-ORG/csrd-compliance-mcp"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["server.py"]

[project.scripts]
csrd-compliance-mcp = "server:main"
